tests/baselines/reference/nameCollisions.errors.txt
==== tests/cases/compiler/nameCollisions.ts (9 errors) ====
    // bug 738635: Error for clinterfaces is gone
    
    module T {
        var x = 2;
    
        module x { // error
               ~
!!! nameCollisions.ts(6,12): error TS2000: Duplicate identifier 'x'. Additional locations:
!!! 	nameCollisions.ts(4,9)
            export class Bar {
                test: number;
            }
        }
    
        module z {
            var t;
        }
        var z; // error
            ~
!!! nameCollisions.ts(15,9): error TS2000: Duplicate identifier 'z'. Additional locations:
!!! 	nameCollisions.ts(12,12)
    
        module y {
            var b;
        }
    
        class y { } // error
              ~
!!! nameCollisions.ts(21,11): error TS2000: Duplicate identifier 'y'. Additional locations:
!!! 	nameCollisions.ts(17,12)
    
        var w;
        module w { } //ok
    
        var f;
        function f() { } //error
                 ~
!!! nameCollisions.ts(27,14): error TS2000: Duplicate identifier 'f'. Additional locations:
!!! 	nameCollisions.ts(26,9)
    
        function f2() { }
        var f2; // error
            ~~
!!! nameCollisions.ts(30,9): error TS2000: Duplicate identifier 'f2'. Additional locations:
!!! 	nameCollisions.ts(29,5)
    
        var i;
        interface i { } //ok
    
        class C { }
        function C() { } // error
                 ~
!!! nameCollisions.ts(36,14): error TS2000: Duplicate identifier 'C'. Additional locations:
!!! 	nameCollisions.ts(35,5)
    
        function C2() { }
        class C2 { } // error
              ~~
!!! nameCollisions.ts(39,11): error TS2000: Duplicate identifier 'C2'. Additional locations:
!!! 	nameCollisions.ts(38,5)
    
        function fi() { }
        interface fi { } // ok
    
        class cli { }
        interface cli { } // error
                  ~~~
!!! nameCollisions.ts(45,15): error TS2000: Duplicate identifier 'cli'. Additional locations:
!!! 	nameCollisions.ts(44,5)
    
        interface cli2 { }
        class cli2 { } // error
              ~~~~
!!! nameCollisions.ts(48,11): error TS2000: Duplicate identifier 'cli2'. Additional locations:
!!! 	nameCollisions.ts(47,5)
    }